deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mikedeheij-website
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mikedeheij-website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
     labels:
        app: mikedeheij-website
    spec:
      containers:
      - image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        name: homepage
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 100Mi
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: mikedeheij-website
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 1
      volumes:
      - configMap:
          defaultMode: 420
          name: mikedeheij-website
        name: mikedeheij-website
